--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="./node_modules/chart.js/dist/Chart.bundle.min.js"></script>
     <script src="./chart.js"></script>
     <title>Campaign Charter</title>
 </head>
 <body>
     <header>
-        <h1><i class="fas fa-shopping-basket"></i>Shopping<span>List</span></h1>
+        <h1><i class="fas fa-shopping-basket"></i>Campaign<span>Chart</span></h1>
         <!-- 3 borders color under the h1 element -->
         <div class="borderBottom">
             <div class="borderColor1"></div>
