adding input fields

--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
     <!-- end of borderBottom -->
     <div class="secondHeader">
     <h2 id="first">Get it done today</h2>
-    <input id="userinput" type="text" placeholder="Enter items!" />
+    <div class="campaign-input">
+        <div>
+            Name: <input id="name" type="text" placeholder="Enter Campaign Name" />
+        </div><br>
+        <div>
+            Country: <input id="country" type="text" placeholder="Enter Country" />
+        </div><br>
+        <div>
+            Budget: <input id="budget" type="text" placeholder="Enter Budget" />
+        </div><br>
+        <div>
+            Goal: <input id="goal" type="text" placeholder="Enter Goal" />
+        </div><br>
+        <div>
+            Category: <input id="category" type="text" placeholder="Enter Category" />
+        </div><br>
+    </div>
+    
     </div>
 
     <div class="container">
