Adding input fields

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="borderColor2"></div>
             <div class="borderColor3"></div>
         </div>
-    </header> fields
+    </header>
     <!-- end of borderBottom -->
     <div class="secondHeader">
     <h2 id="first">Get it done today</h2>
