--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <div>
             Category: <input id="category" type="text" placeholder="Enter Category" />
         </div><br>
+        <div>
+            <button id="enter"><i class="fas fa-cart-plus"></i>Add</button>
+        </div><br>
     </div>
     
     </div>
