--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <script src="./node_modules/chart.js/dist/Chart.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="./chart.js"></script>
     <title>Campaign Charter</title>
 </head>
 <body>
+        
     <header>
         <h1><i class="fas fa-shopping-basket"></i>Campaign<span>Chart</span></h1>
         <!-- 3 borders color under the h1 element -->
@@ -21,52 +23,112 @@
     </header>
     <!-- end of borderBottom -->
     <div class="secondHeader">
-    <h2 id="first">Get it done today</h2>
-    <div class="campaign-input">
-        <div>
-            Name: <input id="name" type="text" placeholder="Enter Campaign Name" />
-        </div><br>
-        <div>
-            Country: <input id="country" type="text" placeholder="Enter Country" />
-        </div><br>
-        <div>
-            Budget: <input id="budget" type="text" placeholder="Enter Budget" />
-        </div><br>
-        <div>
-            Goal: <input id="goal" type="text" placeholder="Enter Goal" />
-        </div><br>
-        <div>
-            Category: <input id="category" type="text" placeholder="Enter Category" />
-        </div><br>
-        <div>
-            <button id="enter"><i class="fas fa-cart-plus"></i>Add</button>
-        </div><br>
-    </div>
+        <h2 id="first">Get it done today</h2>
+        <div class="campaign-input">
+            <div>
+                Name: <input id="name" type="text" placeholder="Enter Campaign Name" />
+            </div><br>
+            <div>
+                Country: <input id="country" type="text" placeholder="Enter Country" />
+            </div><br>
+            <div>
+                Budget: <input id="budget" type="text" placeholder="Enter Budget" />
+            </div><br>
+            <div>
+                Goal: <input id="goal" type="text" placeholder="Enter Goal" />
+            </div><br>
+            <div>
+                Category: <input id="category" type="text" placeholder="Enter Category" />
+            </div><br>
+            <div>
+                <button id="enter"><i class="fas fa-cart-plus"></i>Add</button>
+            </div><br>
+        </div>
     
     </div>
-
     <div class="container">
-        <canvas id="myChart"></canvas>
+            <canvas id="myChart"></canvas>
     </div>
+    <script>
+        const obj = [
+    { "name": "n1", "country": "USA", "budget": 149, "goal": "Awareness", "category": "Technology" },
+    { "name": "n2", "country": "USA", "budget": 250, "goal": "Awareness", "category": "Sports" },
+    { "name": "n3", "country": "EGY", "budget": 300, "goal": "Awareness", "category": "Technology" },
+    { "name": "n4", "country": "USA", "budget": 150, "goal": "Awareness", "category": "Sports" },
+    { "name": "n5", "country": "USA", "budget": 120, "goal": "Conversion", "category": "Sports" }
+    ]
+  let myChart = document.getElementById('myChart').getContext('2d');
+
+  // Global Options
+  Chart.defaults.global.defaultFontFamily = 'Lato';
+  Chart.defaults.global.defaultFontSize = 18;
+  Chart.defaults.global.defaultFontColor = '#777';
+
+  let massPopChart = new Chart(myChart, {
+    type:'bar', // bar, horizontalBar, pie, line, doughnut, radar, polarArea
+    data:{
+      labels:['EGY', 'USA'],
+      datasets:[{
+        label:'Technology',
+        data:[
+          obj[0].budget,
+          obj[1].budget,
+        ],
+        //backgroundColor:'green',
+        backgroundColor:[
+          'rgba(255, 99, 132, 0.6)',
+          'rgba(54, 162, 235, 0.6)',
+
+        ],
+        borderWidth:1,
+        borderColor:'#777',
+        hoverBorderWidth:2,
+        hoverBorderColor:'#777'
+      },
+      {
+        label:'Sports',
+        data:[
+          obj[2].budget,
+          obj[3].budget,
+        ],
+        //backgroundColor:'green',
+        backgroundColor:[
+          'rgba(54, 162, 235, 0.6)',
+          'rgba(255, 99, 132, 0.6)',
+
+        ],
+        borderWidth:1,
+        borderColor:'#777',
+        hoverBorderWidth:2,
+        hoverBorderColor:'#777'
+      }]
+    },
+    options:{
+      title:{
+        display:true,
+        text:'Analysis by country and category',
+        fontSize:30
+      },
+      legend:{
+        display:true,
+        position:'top',
+        labels:{
+          fontColor:'#777'
+        }
+      },
+      layout:{
+        padding:{
+          left:50,
+          right:0,
+          bottom:0,
+          top:0
+        }
+      },
+      tooltips:{
+        enabled:true
+      }
+    }
+  });
+    </script>
 </body>
-<script>
-    let myChart = document.getElementById('myChart').getContext('2d');
-
-    let barChart = new Chart(myChart, {
-        type: 'bar',
-        data: {
-            labels: ['USA', 'EGY'],
-            dataSets: [{
-                label: "budget",
-                data: [
-                    149,
-                    139
-                ]
-
-            }]
-        },
-        option: {}
-    })
-</script>
-
 </html>
