make budget type number

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Country: <input id="country" type="text" placeholder="Enter Country" />
             </div><br>
             <div>
-                Budget: <input id="budget" type="text" placeholder="Enter Budget" />
+                Budget: <input id="budget" type="number" placeholder="Enter Budget" />
             </div><br>
             <div>
                 Goal: <input id="goal" type="text" placeholder="Enter Goal" />
